<resources>
    <string name="App_Name">Dynamite Safe</string>
    <string name="Alert_Ok">OK</string>
    <string name="Alert_Cancel">Cancel</string>
    <string name="Alert_Copy">Copy</string>
    <string name="Alert_Share">Forward</string>
    <string name="Alert_Close">Close</string>
    <string name="Alert_Success">Success</string>
    <string name="Alert_Copied">Copied</string>
    <string name="Button_Cancel">Cancel</string>
    <string name="Button_Back">Back</string>
    <string name="Button_Ok">OK</string>
    <string name="Button_Share">Share</string>
    <string name="Error">Error</string>
    <string name="Guest_Title">Dynamite Safe Wallet</string>
    <string name="Guest_Subtitle" translatable="false">DYNAMITE SAFE</string>
    <string name="Guest_CreateWallet">Create Wallet</string>
    <string name="Guest_RestoreWallet">Restore</string>
    <string name="Guest_Version" translatable="false">version %s</string>
    <string name="Restore_Title">Restore</string>
    <string name="Restore_Subtitle">Enter Secret Key</string>
    <string name="Restore_ValidationFailed">Incorrect Secret Key</string>
    <string name="Restore_RestoreFailed">Failed to restore wallet</string>
    <string name="Backup_Intro_Title">Secret Key</string>
    <string name="Backup_Intro_Subtitle">Your secret key is the only way to restore your wallet and funds if your phone is ever lost, stolen, broken, or upgraded.\n\n It consists of 12 words. Store it safely offline.</string>
    <string name="Backup_Intro_Later">Later</string>
    <string name="Backup_Intro_BackupNow">Backup</string>
    <string name="Backup_Words_Title">Secret Key</string>
    <string name="Backup_Confirmation_SecretKey">I understand that I am a sole owner of a private 12-word Secret Key which is securely stored on my phone and enables me to control funds on my wallet.</string>
    <string name="Backup_Confirmation_DeleteAppWarn">I understand that if this app is ever moved, deleted or malfunctions, the access to my wallet can be only recovered with that Secret Key.</string>
    <string name="Backup_Confirmation_LockAppWarn">I understand that changing the phone\s unlock PIN or deleting app data in Android settings deletes the Secret Key from device. I would need to re-enter my Secret Key to regain access to my wallet.</string>
    <string name="Backup_Confirmation_Disclaimer">I understand that developers of this app can not be held responsible for any unintended bugs or issues that may arise while using this app.</string>
    <string name="Backup_Confirmation_Title">Enter following words from your Secret Key</string>
    <string name="Backup_Confirmation_Description">Enter words from your secret key.</string>
    <string name="Backup_Confirmation_FailureAlertText"> Words do not match</string>
    <string name="Backup_Confirmation_CheckTitle">Check…</string>
    <string name="Backup_Button_Confirm">Confirm</string>
    <string name="Backup_Button_Next">Next</string>
    <string name="Backup_Button_Submit">Submit</string>
    <string name="Balance_Title">Your Balance:</string>
    <string name="Balance_Deposit">Receive</string>
    <string name="Balance_Send">Send</string>
    <string name="Balance_RatePerCoin">%s %s</string>
    <string name="Balance_SyncedUntil">until: %s</string>
    <string name="Balance_Syncing">Syncing…</string>
    <string name="Balance_AddCoins">Add Coins</string>
    <string name="Balance_Sort_Balance">Balance</string>
    <string name="Balance_Sort_PopupTitle">Sort by</string>
    <string name="Balance_Sort_Az">A-Z</string>
    <string name="Balance_Sort_Default">Default</string>
    <string name="Send_Title1">Send</string>
    <string name="Send_Title">Send %s</string>
    <string name="Send_Hint_PaymentReference">Payment Reference</string>
    <string name="Send_Hint_Address">Address</string>
    <string name="Send_Hint_Amount">Amount</string>
    <string name="Send_Button_Paste">Paste</string>
    <string name="Send_Button_More">More</string>
    <string name="Send_Button_Send">Send</string>
    <string name="Send_Button_Max">Max</string>
    <string name="Send_ScanQrCode">Scan QR Code</string>
    <string name="Send_Success">\u2713 Sent</string>
    <string name="Send_Error_InvalidAddress">Address seems invalid. Please check and try again!</string>
    <string name="Send_Error_InsufficientBalance">Not enough funds.</string>
    <string name="Send_Error_IncorrectAddress">Incorrect Address</string>
    <string name="Send_Error_BalanceAmount">Balance %s</string>
    <string name="Send_DialogTitle">Confirm Transaction</string>
    <string name="Send_DialogFee">Fee:</string>
    <string name="Send_DialogTotal">Total:</string>
    <string name="Send_Sending">Sending</string>
    <string name="Send_ERC_Alert">Transaction fees for %s (ERC20) paid in Ethereum. You need %s ETH.</string>
    <string name="Deposit_Title">Receive %s</string>
    <string name="Deposit_Share">Forward</string>
    <string name="Deposit_Your_Address">Your Address</string>
    <string name="Timestamp_JustNow">just now</string>
    <string name="Timestamp_MinAgo">%dm. ago</string>
    <string name="Timestamp_HoursAgo">%dh. ago</string>
    <string name="Timestamp_Today">Тoday</string>
    <string name="Timestamp_Yesterday">Yesterday</string>
    <string name="Transactions_Title">Transactions</string>
    <string name="Transactions_FilterAll">ALL</string>
    <string name="Transactions_EmptyList">You don\’t have any transactions yet</string>
    <string name="TransactionInfo_Title">Transaction</string>
    <string name="TransactionInfo_Status">Status</string>
    <string name="TransactionInfo_Status_Confirmed">Confirmed</string>
    <string name="TransactionInfo_Id">ID</string>
    <string name="TransactionInfo_To">To</string>
    <string name="TransactionInfo_From">From</string>
    <string name="TransactionInfo_Time">Time</string>
    <string name="TransactionInfo_ButtonVerify">Verify</string>
    <string name="TransactionInfo_Status_Pending">Pending</string>
    <string name="TransactionInfo_HistoricalRate">Historical Rate</string>
    <string name="FullInfo_Title">Transaction</string>
    <string name="FullInfo_Time">Time</string>
    <string name="FullInfo_Block">Block</string>
    <string name="FullInfo_Confirmations">Confirmations</string>
    <string name="FullInfo_Inputs">Inputs</string>
    <string name="FullInfo_Outputs">Outputs</string>
    <string name="FullInfo_Size">Size</string>
    <string name="FullInfo_Fee">Fee</string>
    <string name="FullInfo_Rate">Rate</string>
    <string name="FullInfo_Source">Source</string>
    <string name="FullInfo_Contract">Contract</string>
    <string name="FullInfo_From">From</string>
    <string name="FullInfo_To">To</string>
    <string name="FullInfo_GasLimit">Gas Limit</string>
    <string name="FullInfo_GasUsed">Gas Used</string>
    <string name="FullInfo_GasPrice">Gas Price</string>
    <string name="FullInfo_Source_Title">Source</string>
    <string name="FullInfo_Source_Online">Online</string>
    <string name="FullInfo_Source_Offline">Offline</string>
    <string name="FullInfo_Error_Subtitle">Offline</string>
    <string name="FullInfo_Error_Retry">Retry</string>
    <string name="FullInfo_Error_ChangeSource">Change Source</string>
    <string name="FullInfo_Id">ID</string>
    <string name="FullInfo_TotalInput">Total Input</string>
    <string name="FullInfo_TotalOutput">Total Output</string>
    <string name="FullInfo_FeePerByte">Fee per byte</string>
    <string name="FullInfo_FeeRate">Fee Rate</string>
    <string name="FullInfo_NoAddress">Empty Address</string>
    <string name="FullInfo_SatByte">sat/B</string>
    <string name="FullInfo_Bytes">Bytes</string>
    <string name="FullInfo_SubtitleInputs">Inputs</string>
    <string name="FullInfo_SubtitleOutputs">Outputs</string>
    <string name="FullInfoEth_Nonce">Nonce</string>
    <string name="FullInfoEth_Amount">Amount</string>
    <string name="Settings_Title">Settings</string>
    <string name="Settings_SecurityCenter">Security Center</string>
    <string name="Settings_BaseCurrency">Base Currency</string>
    <string name="Settings_Language">Language</string>
    <string name="Settings_LightMode">Light Mode</string>
    <string name="Settings_About">About</string>
    <string name="Settings_ShareThisWallet">Tell your Friends</string>
    <string name="Settings_InfoTitleWithVersion">Dynamite Safe %s</string>
    <string name="Settings_InfoSubtitle" translatable="false">decentralized app</string>
    <string name="Settings_InfoLink">https://www.dynamitetoken.co/</string>
    <string name="Settings_Error_FingerprintNotEnabled">Fingerprint Not Enabled</string>
    <string name="Settings_Error_NoFingerprintAddedYet">You have not enabled fingerprint on this device. Go to Settings > Security to set up fingerprint access.</string>
    <string name="SettingsSecurity_Fingerprint">Fingerprint</string>
    <string name="SettingsSecurity_EditPin">Edit Passcode</string>
    <string name="SettingsSecurity_BackupWallet">Backup Wallet</string>
    <string name="SettingsSecurity_UnlinkFromThisDevice">Unlink from this device</string>
    <string name="SettingsSecurity_ImportWalletConfirmation_1">This action will remove the currently installed wallet from this device.</string>
    <string name="SettingsSecurity_ImportWalletConfirmation_2">Make sure you have backed up Secret Key or you will not be able to access your funds in the future.</string>
    <string name="SettingsCurrency_Title">Base Currency</string>
    <string name="SettingsLanguage_Title">Language</string>
    <string name="SettingsAbout_Title">About</string>
    <string name="About_Subtitle" translatable="false">Decentralized App</string>
    <string name="Link_DYT" translatable="false">https://www.dynamitetoken.co</string>
    <string name="Discord" translatable="false">https://discord.gg/GQm5KsU</string>
    <string name="Telegram" translatable="false">https://t.me/Dynamitetoken</string>
    <string name="Ddex" translatable="false">https://ddex.io/trade/DYT-WETH</string>
    <string name="Txbit" translatable="false">https://txbit.io/Trade/DYT/ETH</string>
    <string name="Vindax" translatable="false">https://vindax.com/exchange-base.html?symbol=DYT_ETH</string>
    <string name="Uniswap" translatable="false" >https://uniswap.exchange/swap/0xaD95a3c0fdC9bC4b27fD79e028A0a808D5564aa4</string>
    <string name="SettingsAbout_TermsPrivacySubtitle">Terms &amp; Privacy:</string>
    <string name="SettingsAbout_TermsPrivacyText">Its your responsability to backup your secret key and keep it private. Never show it to anyone.
        \n\nIf its lost, stolen or forgotten your funds can be used by the person who has your secret key.
        \n\nSpecial thanks to HorizontalSystem for this open source wallet and Jbrice for forking and adapting the wallet for dynamite token.
    </string>
    <string name="SettingsShare_Title">Share</string>
    <string name="SettingsShare_Text">Dynamite Safe - Nice App!</string>
    <string name="SettingsShare_Link" translatable="false">https://play.google.com/store/apps/details?id=io.dyt.dynamitewallet</string>
    <string name="Alert_KeysInvalidatedTitle">Android Keystore Error</string>
    <string name="Alert_KeysInvalidatedDescription">The encrypted data holding your wallet was recently invalidated because your Android lock screen was changed</string>
    <string name="Alert_TitleWarning">Warning</string>
    <string name="Alert_NoDeviceLockDescription">Set up a lock screen on this device to continue. Go to “Settings” > “Security” > “Screen Lock” and enable the lock screen setting.</string>
    <string name="Alert_CustomKeyboardIsUsed">You are using a third-party keyboard. You have to use default keyboard.</string>
    <string name="Unlock_Page_EnterYourPin">Passcode</string>
    <string name="Error_UnsupportedBlockchain">Unsupported currency</string>
    <string name="Hud_Text_Unlock">Unlock</string>
</resources>