<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_first_page"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >

    <io.horizontalsystems.dynamitewallet.ui.extensions.ShadowlessToolbarView
        android:id="@+id/shadowlessToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?AboutBackgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shadowlessToolbar"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            >

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="360dp"
                android:layout_height="57dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/logo_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--TextView
                android:id="@+id/appName"
                style="@style/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/Guest_Title"
                android:textColor="?TextColorGreyLightToDark"
                app:layout_constraintStart_toEndOf="@+id/appIcon"
                app:layout_constraintTop_toTopOf="@+id/appIcon"
                />

            <TextView
                android:id="@+id/appShortDescription"
                style="@style/Body1Grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/About_Subtitle"
                app:layout_constraintStart_toStartOf="@+id/appName"
                app:layout_constraintTop_toBottomOf="@+id/appName"
                /-->

            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="24dp"
                android:background="@color/steel_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appIcon"
                />

            <TextView
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="17sp"
                android:linksClickable="true"
                android:textColor="@color/white"
                android:text="Website"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appIcon"
                />
            <TextView
                android:id="@+id/dytLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="12sp"
                android:autoLink="web"
                android:textColorLink="@color/red_warning"
                android:textColor="@color/red_warning"
                android:text="@string/Link_DYT"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/website"
                />

            <TextView
                android:id="@+id/discord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="17sp"
                android:linksClickable="true"
                android:textColor="@color/white"
                android:text="Discord"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dytLink"
                />
            <TextView
                android:id="@+id/discordLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="12sp"
                android:autoLink="web"
                android:textColorLink="@color/red_warning"
                android:textColor="@color/red_warning"
                android:text="@string/Discord"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discord"
                />

            <TextView
                android:id="@+id/telegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="17sp"
                android:linksClickable="true"
                android:textColor="@color/white"
                android:text="Telegram"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discordLink"
                />
            <TextView
                android:id="@+id/telegramLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="12sp"
                android:autoLink="web"
                android:textColorLink="@color/red_warning"
                android:textColor="@color/red_warning"
                android:text="@string/Telegram"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/telegram"
                />

            <TextView
                android:id="@+id/Exchanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="17sp"
                android:linksClickable="true"
                android:textColor="@color/white"
                android:text="Exchanges"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/telegramLink"
                />
            <TextView
                android:id="@+id/ddexLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="12sp"
                android:autoLink="web"
                android:textColorLink="@color/red_warning"
                android:textColor="@color/red_warning"
                android:text="@string/Ddex"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Exchanges"
                />
            <TextView
                android:id="@+id/txbitLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="12sp"
                android:autoLink="web"
                android:textColorLink="@color/red_warning"
                android:textColor="@color/red_warning"
                android:text="@string/Txbit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ddexLink"
                />
            <TextView
                android:id="@+id/vindaxLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="12sp"
                android:autoLink="web"
                android:textColorLink="@color/red_warning"
                android:textColor="@color/red_warning"
                android:text="@string/Vindax"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txbitLink"
                />
            <TextView
                android:id="@+id/uniswapLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="12sp"
                android:autoLink="web"
                android:textColorLink="@color/red_warning"
                android:textColor="@color/red_warning"
                android:text="@string/Uniswap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vindaxLink"
                />

            <TextView
                android:id="@+id/termsSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:text="@string/SettingsAbout_TermsPrivacySubtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/uniswapLink"
                />

            <TextView
                android:id="@+id/termsText"
                style="@style/Body1Grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingBottom="24dp"
                android:text="@string/SettingsAbout_TermsPrivacyText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/termsSubTitle"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
